chore: add example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "paidtype2"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "freetype"
+path = "src/lib.rs"
+
+[[example]]
+name = "initializing"
+path = "examples/intializing.rs"
+
 [dependencies]
 
 [build-dependencies]
